add recomment function
# Conflicts:
#	src/main/java/com/sep/comiverse/plugin/crud/ChapterCrudPlugin.java
#	src/main/java/com/sep/comiverse/repository/IComicRepository.java